--- a/Gibbed.Borderlands.SaveEdit/Gibbed.Borderlands.SaveEdit.csproj
+++ b/Gibbed.Borderlands.SaveEdit/Gibbed.Borderlands.SaveEdit.csproj
@@ -54,6 +54,7 @@
     <Compile Include="Editor.Designer.cs">
       <DependentUpon>Editor.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlayerClass.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Editor.resx">
