--- a/trunk/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
+++ b/trunk/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
@@ -46,7 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Character.cs" />
+    <Compile Include="CharacterType.cs" />
     <Compile Include="SaveFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Player.cs" />
