--- a/trunk/Gibbed.Borderlands.SaveEdit/Gibbed.Borderlands.SaveEdit.csproj
+++ b/trunk/Gibbed.Borderlands.SaveEdit/Gibbed.Borderlands.SaveEdit.csproj
@@ -12,6 +12,7 @@
     <AssemblyName>Gibbed.Borderlands.SaveEdit</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ApplicationIcon>Resources\Pink.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -86,6 +87,9 @@
       <Project>{E6FFE137-F5CF-4DFB-A59F-CCA65CF40BE8}</Project>
       <Name>Gibbed.Borderlands.FileFormats</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Resources\Pink.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
