--- a/trunk/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
+++ b/trunk/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CharacterType.cs" />
     <Compile Include="SaveFile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveStream.cs" />
     <Compile Include="Save\AmmoPool.cs" />
     <Compile Include="Save\Echo.cs" />
     <Compile Include="Save\EchoPlaythrough.cs" />
@@ -58,7 +59,6 @@
     <Compile Include="Save\Player.cs" />
     <Compile Include="Save\Skill.cs" />
     <Compile Include="Save\Weapon.cs" />
-    <Compile Include="StreamHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Gibbed.Helpers\Gibbed.Helpers.csproj">
