--- a/projects/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
+++ b/projects/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
@@ -35,7 +35,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
-    <Reference Include="System.Data.DataSetExtensions">
+    <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
