--- a/projects/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
+++ b/projects/Gibbed.Borderlands.FileFormats/Gibbed.Borderlands.FileFormats.csproj
@@ -56,9 +56,9 @@
     <Compile Include="Save\Weapon.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Gibbed.Helpers\Gibbed.Helpers.csproj">
-      <Project>{5162A9FB-4DE1-4BBF-B7A2-5E8116AB0D26}</Project>
-      <Name>Gibbed.Helpers</Name>
+    <ProjectReference Include="..\Gibbed.IO\Gibbed.IO.csproj">
+      <Project>{047857BA-DAA3-4CA7-AFB8-A1B082B28C6A}</Project>
+      <Name>Gibbed.IO</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
